[gd_scene load_steps=17 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Assets/Scripts/ALLY.gd" type="Script" id=2]
[ext_resource path="res://Assets/Fonts/FFFFORWA.TTF" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/Textures/card_base.png" type="Texture" id=4]

[sub_resource type="Shader" id=11]
code = "shader_type canvas_item;

uniform vec4 color : hint_color = vec4(1.0);
uniform float width : hint_range(0, 10) = 1.0;
uniform int pattern : hint_range(0, 2) = 0; // diamond, circle, square
uniform bool inside = false;
uniform bool add_margins = true; // only useful when inside is false

void vertex() {
	if (add_margins) {
		VERTEX += (UV * 2.0 - 1.0) * width;
	}
}

bool hasContraryNeighbour(vec2 uv, vec2 texture_pixel_size, sampler2D texture) {
	for (float i = -ceil(width); i <= ceil(width); i++) {
		float x = abs(i) > width ? width * sign(i) : i;
		float offset;
		
		if (pattern == 0) {
			offset = width - abs(x);
		} else if (pattern == 1) {
			offset = floor(sqrt(pow(width + 0.5, 2) - x * x));
		} else if (pattern == 2) {
			offset = width;
		}
		
		for (float j = -ceil(offset); j <= ceil(offset); j++) {
			float y = abs(j) > offset ? offset * sign(j) : j;
			vec2 xy = uv + texture_pixel_size * vec2(x, y);
			
			if ((xy != clamp(xy, vec2(0.0), vec2(1.0)) || texture(texture, xy).a == 0.0) == inside) {
				return true;
			}
		}
	}
	
	return false;
}

void fragment() {
	vec2 uv = UV;
	
	if (add_margins) {
		vec2 texture_pixel_size = vec2(1.0) / (vec2(1.0) / TEXTURE_PIXEL_SIZE + vec2(width * 2.0));
		
		uv = (uv - texture_pixel_size * width) * TEXTURE_PIXEL_SIZE / texture_pixel_size;
		
		if (uv != clamp(uv, vec2(0.0), vec2(1.0))) {
			COLOR.a = 0.0;
		} else {
			COLOR = texture(TEXTURE, uv);
		}
	} else {
		COLOR = texture(TEXTURE, uv);
	}
	
	if ((COLOR.a > 0.0) == inside && hasContraryNeighbour(uv, TEXTURE_PIXEL_SIZE, TEXTURE)) {
		COLOR.rgb = inside ? mix(COLOR.rgb, color.rgb, color.a) : color.rgb;
		COLOR.a += (1.0 - COLOR.a) * color.a;
	}
}"

[sub_resource type="ShaderMaterial" id=12]
shader = SubResource( 11 )
shader_param/color = Color( 0, 0, 0, 1 )
shader_param/width = 0.5
shader_param/pattern = 2
shader_param/inside = false
shader_param/add_margins = true

[sub_resource type="ParticlesMaterial" id=1]
emission_shape = 5
emission_ring_radius = 48.0
emission_ring_inner_radius = 40.0
emission_ring_height = 0.0
flag_disable_z = true
spread = 0.0
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.1
orbit_velocity_random = 0.5
scale = 4.0

[sub_resource type="DynamicFont" id=2]
size = 8
extra_spacing_top = 3
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.607843, 0, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.290196, 0.290196, 0.290196, 0 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.607843, 0.607843, 0.607843, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.290196, 0.290196, 0.290196, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 1, 1, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.290196, 0.290196, 0.290196, 0 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.607843, 0.607843, 0.607843, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.290196, 0.290196, 0.290196, 1 )

[sub_resource type="DynamicFont" id=7]
size = 8
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_top = 3
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=8]
resource_name = "return_to_card"
length = 2.5
tracks/0/type = "value"
tracks/0/path = NodePath("CPUParticles2D:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 2,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TextureRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 2.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.5, 2.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 32, 28 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("TextureRect:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1.5, 2.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -8, -32 ), Vector2( -8, -32 ), Vector2( 32, 28 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Sprite:rect_scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1.5, 2.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 0, 0 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("TextureRect:rect_scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 1.5, 2.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 0, 0 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Health:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Experience:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Sprite/Name:visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="DynamicFont" id=9]
size = 8
font_data = ExtResource( 3 )

[sub_resource type="Curve" id=10]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.333333, 0.618182 ), -2.12929, -4.45091, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[node name="ALLY" type="Control" groups=["HEALABLE"]]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -960.0
margin_bottom = -536.0
focus_mode = 2
mouse_filter = 1
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="TextureRect" parent="."]
material = SubResource( 12 )
margin_right = 64.0
margin_bottom = 64.0
rect_scale = Vector2( -1, 1 )
rect_pivot_offset = Vector2( 32, 0 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CPUParticles2D" type="Particles2D" parent="Sprite"]
show_behind_parent = true
position = Vector2( 32, 32 )
z_index = 3
emitting = false
amount = 96
visibility_rect = Rect2( -47.8987, -46.57, 95.637, 93.478 )
process_material = SubResource( 1 )

[node name="Name" type="Label" parent="Sprite"]
margin_left = -64.0
margin_top = 24.0
margin_bottom = 56.0
rect_scale = Vector2( -1, 1 )
rect_pivot_offset = Vector2( 96, 0 )
custom_fonts/font = SubResource( 2 )
text = "Dave"
align = 2
autowrap = true
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Health" type="ProgressBar" parent="."]
show_behind_parent = true
margin_left = -16.0
margin_top = 72.0
margin_right = 80.0
margin_bottom = 96.0
custom_styles/fg = SubResource( 5 )
custom_styles/bg = SubResource( 6 )
step = 1.0
value = 100.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HP_VAL" type="Label" parent="Health"]
margin_right = 96.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 2 )
text = "40/40"
align = 1
valign = 1
__meta__ = {
"_editor_description_": ""
}

[node name="Experience" type="ProgressBar" parent="."]
show_behind_parent = true
margin_left = -16.0
margin_top = 96.0
margin_right = 64.0
margin_bottom = 114.0
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 4 )
step = 1.0
value = 100.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EXP_VAL" type="Label" parent="Experience"]
margin_right = 80.0
margin_bottom = 18.0
custom_fonts/font = SubResource( 7 )
text = "LEVEL:1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Tween" type="Tween" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/return_to_card = SubResource( 8 )

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
modulate = Color( 0.772549, 0.654902, 0.403922, 1 )
show_behind_parent = true
margin_left = -8.0
margin_top = -32.0
margin_right = 72.0
margin_bottom = 88.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TextureRect"]
margin_left = 8.0
margin_top = 8.0
margin_right = 72.0
margin_bottom = 40.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 9 )
text = "DANIEL"
align = 1
valign = 1
autowrap = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2( 32, 32 )
z_index = 8
emitting = false
amount = 128
lifetime = 2.0
one_shot = true
explosiveness = 1.0
emission_shape = 1
emission_sphere_radius = 64.0
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 32.0
scale_amount = 16.0
scale_amount_curve = SubResource( 10 )
color = Color( 1, 1, 1, 0.803922 )

[connection signal="mouse_entered" from="." to="." method="_on_ALLY_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_ALLY_mouse_exited"]
